2015-06-26  Mathieu Lirzin  <mthl@openmailbox.org>

	Add missing 'makefile.am'.
	* scm/mcron/makefile.am: New file.
	* .gitignore: Ignore 'mcron' only in the top-level directory.


2014-05-25  Dale Mellor <dale_mellor@users.sourceforge.net>

	* Juggled build infrastructure so that we can make the minimal man
	page in the proper autotools way.

	* configure.ac: version to 1.0.8.


2014-04-28  Dale Mellor <dale_mellor@users.sourceforge.net>

	* We now run against, and require, guile-2.0.

	* configure.ac: version to 1.0.7.


2012-02-04  Dale Mellor <dale_mellor@users.sourceforge.net>

	* main.scm: added search for initial files in
	$XDG_CONFIG_HOME/cron directory, defaulting to ~/.config/cron if
	the environment variable is not set) as well as in ~/.cron
	directory (this is in line with the current FreeDesktop.org
	standards).


2010-06-13  Dale Mellor <dale_mellor@users.sourceforge.net>

	* configure.ac: added --enable-no-vixie-clobber argument to
	configure so that the root user can avoid overwriting a legacy
	cron installation.

	* mcron.1: added simple, minimal man page using help2man (the
	texinfo file is still the primary documentation source).

	* makefile.am: replaced use of mkinstalldirs with install; the
	former is not supplied with the latest automake (1.11).


2008-02-21  Dale Mellor <dale_mellor@users.sourceforge.net>

	* ALL FILES: Replaced version 2 GPL notices with version 3 ones.

	* makefile.am: Do not remove COPYING file with make
	maintainer-clean; if you do it will eventually get replaced with
	the old version 2 GPL by a subsequent automake.

	* configure.ac: Bumped version to 1.0.4.


2008-01-25  Dale Mellor <dale_mellor@users.sourceforge.net>

	* main.scm (command-type): Files which are listed on the command
	line are assumed to be guile configurations if they do not end in
	.guile or .vixie (previously they were silently ignored).

	* main.scm: Argument to --schedule is no longer optional (the