@@ -10,13 +10,18 @@ config.status
 configure
 core.scm
 depcomp
+/doc/.dirstamp
+/doc/config.texi
+/doc/mcron.info
+/doc/mcron.1
+/doc/stamp-vti
+/doc/version.texi
 install-sh
 makefile
 makefile.in
 /mcron
 mcron.c
-mcron.info
+/mdate-sh
 *.o
-mcron.texinfo
 missing
 texinfo.tex
