@@ -1,0 +1,5 @@
+@set CONFIG_SOCKET_FILE @CONFIG_SOCKET_FILE@
+@set CONFIG_SPOOL_DIR @CONFIG_SPOOL_DIR@
+@set CONFIG_PID_FILE @CONFIG_PID_FILE@
+@set CONFIG_ALLOW_FILE @CONFIG_ALLOW_FILE@
+@set CONFIG_DENY_FILE @CONFIG_DENY_FILE@
